# Open-Research-Converter

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: README.md
src/env_templates/: README.md  js.env.template
src/orc/: __init__.py
src/orc/backend/: Dockerfile
src/orc/backend/orc_backend/: app.py  open_research_converter.py  requester.py
src/orc/frontend/: Dockerfile
src/orc/frontend/orc-demo/: .env  README.md  package-lock.json  package.json
src/orc/frontend/orc-demo/public/: index.html
src/orc/frontend/orc-demo/src/: App.css  App.js
src/orc/frontend/orc-demo/src/components/: CsvFileReader.jsx  Footer.jsx  Header.jsx  HintButton.jsx  TextBox.jsx  UploadFile.jsx
src/orc/frontend/orc-demo/src/components/styles/: CsvFileReader.sass  Footer.sass  Header.sass  HintButton.sass  UploadFile.sass
src/orc/nginx/: Dockerfile  local.default.conf  prod.default.conf
src/orc/nginx/static/: 404.html
tests/: conftest.py  test_flask_app.py  test_open_research_converter.py  test_requester.py
tests/fixtures/: extraction.md  fixture_orc_dois.py  jason.list  ret.list
